Fix: changed css style for Right alignment

--- a/component-library/components/sections/contact-block/contact-block.scss
+++ b/component-library/components/sections/contact-block/contact-block.scss
@@ -83,8 +83,8 @@
           grid-column: 9 / -2;
         }
   
-        #{$c}__image {
-          grid-column: 2 / 8;
+        #{$c}__map_wrapper {
+          grid-column: 1 / 8;
           grid-row: 1;
         }
       }
